Fix: state height causing scrollbar to show

--- a/client/app/routes/users/users.scss
+++ b/client/app/routes/users/users.scss
@@ -3,7 +3,7 @@
 
 users .users-container {
   width: 80%;
-  height: 100%;
+  height: 99%;
   margin: 5% auto;
 }
 
